tests/ui/suggestions/suggest-closure-return-type-1.stderr
error[E0282]: type annotations needed
  --> $DIR/suggest-closure-return-type-1.rs:4:28
   |
LL |     unbound_drop(|| -> _ { [] });
   |                            ^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
